--- a/easyfmis/Forms/Software/TrnSalesOrder/TrnSalesOrderDetailSearchItemForm.resx
+++ b/easyfmis/Forms/Software/TrnSalesOrder/TrnSalesOrderDetailSearchItemForm.resx
@@ -126,6 +126,9 @@
   <metadata name="ColumnSearchInventoryItemPrice.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="ColumnSearchInventoryItemSpace.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ColumnSearchNonInventoryItemPrice.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
